--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/forge-icon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/forge-icon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/forge-icon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="/forge-icon.svg">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forge Online with LSD</title>
+    <meta name="description" content="Stay updated with the latest startup news and innovations on Forge Online with LSD. Discover what's happening in the world of startups." />
+    <meta name="keywords" content="Forge, LSD, startup news, innovation, tech news, latest startups" />
+    <meta name="author" content="Forge Team" />
+    <title>Forge Online with LSD - Latest Startup News and Innovations</title>
   </head>
   <body>
     <div id="root"></div>
