better responsive styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Stay updated with the latest startup news and innovations on Forge Online with LSD. Discover what's happening in the world of startups." />
     <meta name="keywords" content="Forge, LSD, startup news, innovation, tech news, latest startups" />
     <meta name="author" content="Forge Team" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Forge Online with LSD - Latest Startup News and Innovations</title>
   </head>
   <body>
